# NETVideoGame

./: CMakeLists.txt  README.md  game.c  game_aux.c  game_graph.c  game_graph.h  game_random.c  game_sdl.c  game_solve.c  game_struct.h  game_text.c  game_tools.c  game_tools.h  model.c  stack.c  stack.h  unit_tests.c
web/: LICENSE.txt  Makefile  demo.js  game.html  game.js  game.wasm  style.css  worker.js  wrapper.c
web/src/: game.c  game_aux.c  game_aux.h  game_ext.c
